--- a/websiterules.css
+++ b/websiterules.css
@@ -1,6 +1,6 @@
 body {
-margin:10;
-padding:10;
+margin:10px;
+padding:10px;
 }
 
 
@@ -10,20 +10,14 @@ color:black;
 font-family: "Arial", sans-serif;
 }
 
-p {
 
-
+h3 {
+color:black;
+font-family: "Arial", sans-serif;
 }
-
-p#bio {
-
-
-}
-
 
 a {
 font-size:120%;
-
 }
 
 img {
@@ -44,8 +38,11 @@ text-align:center;
 width:750px;
 }
 
-
 #qualifications {
 margin-left:50px;
 width:750px;
+}
+
+#bio {
+font-size:120%;
 }
